# Dual-Energy_CT_Image_Segmentation_Toolkit

./: .gitattributes  .gitignore  LICENSE  README.md  build.py  run-test.sh
input/: cubes_99x99x99_32BitReal.raw  cubes_99x99x99_8bit.raw
src/: main.cu  meson.build
src/imagespace/: Helpers.h  ImageSpace.cpp  ImageSpace.h  MaterialCompound.cpp  MaterialCompound.h
src/segmentation/: FelzenszwalbMST.cpp  GaninMST.cpp  PlayneEquivalenceCCL.cu  SimpleCCL.cpp
src/segmentation/FelzenszwalbUtils/: DisjointForest.cpp  DisjointForest.h  MoreUtils.cpp  MoreUtils.h  main.cpp  segmentation.cpp  segmentation.h
src/segmentation/GaninUtils/: GaninUtils.cu  kernels.cuh
src/segmentation/PlayneEqDirectUtils/: reduction.cuh
src/segmentation/utils/: DIYTimer.cpp
test/input/: TestGeometry_16Feb2022_d610.ptm  cubes_99x99x99_32BitReal.raw  cubes_99x99x99_8bit.raw
